--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "firebase": "^6.4.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "react": "^16.9.0",
