--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "material": "^0.3.13",
+    "material-ui": "^0.20.2",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
@@ -55,6 +57,7 @@
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "react-tap-event-plugin": "^3.0.3",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
