--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@material-ui/core": "^4.3.3",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -61,6 +62,8 @@
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.0",
     "semver": "6.3.0",
     "sequelize": "^5.15.1",
     "style-loader": "1.0.0",
